@@ -68,3 +68,5 @@ ALTER TABLE `#####newsmanager` ADD `comment_feed_text` VARCHAR( 255 ) NULL DEFAU
 ALTER TABLE `#####newsmanager` ADD `comment_feed_type` VARCHAR( 7 ) NULL DEFAULT '';
 ALTER TABLE `#####newsmanager` ADD `use_comment_feed_img` TINYINT NOT NULL DEFAULT '0';
 ALTER TABLE `#####newsmanager` ADD `comments_feed_amount` INT NOT NULL DEFAULT '5';
+
+ALTER TABLE `#####imagegallery_config` ADD `list_option_amount` TINYINT NOT NULL DEFAULT '4';
